Prevent animation from stretching screen

--- a/public/home.css
+++ b/public/home.css
@@ -21,6 +21,7 @@
   /* width: 100%; */
   height: 100%;
   z-index: 0;
+  overflow: hidden;
   background-color: lightblue;
 }
 
